--- a/cutschedule/package.json
+++ b/cutschedule/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "firebase-admin": "^13.5.0",
     "lucide-react": "^0.544.0",
     "next": "^15.5.4",
     "prisma": "^6.16.2",
