--- a/cutschedule/package.json
+++ b/cutschedule/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint",
     "typecheck": "tsc --noEmit"
   },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "dependencies": {
+    "@auth/prisma-adapter": "^2.10.0",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.2",
     "@radix-ui/react-label": "^2.1.7",
@@ -18,14 +22,17 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase-admin": "^13.5.0",
+    "googleapis": "^160.0.0",
     "lucide-react": "^0.544.0",
     "next": "^15.5.4",
+    "next-auth": "^4.24.11",
     "prisma": "^6.16.2",
     "react": "^19.1.1",
     "react-day-picker": "^9.11.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.63.0",
     "tailwind-merge": "^3.3.1",
+    "twilio": "^5.10.1",
     "zod": "^4.1.11"
   },
   "devDependencies": {
@@ -37,6 +44,7 @@
     "eslint-config-next": "^15.5.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.2"
   }
 }
