--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,12 @@
       "path": "/api/cron/reminders",
       "schedule": "0 9,12,15,18 * * *"
     }
-  ]
+  ],
+  "functions": {
+    "app/api/cron/reminders/route.ts": {
+      "maxDuration": 30
+    }
+  },
+  "regions": ["iad1"],
+  "framework": "nextjs"
 }
