--- a/cutschedule/package.json
+++ b/cutschedule/package.json
@@ -37,6 +37,7 @@
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.1",
     "@types/node": "^24.5.2",
     "@types/react": "^19.1.14",
     "@types/react-dom": "^19.1.9",
