--- a/cutschedule/package.json
+++ b/cutschedule/package.json
@@ -28,7 +28,7 @@
     "lucide-react": "^0.544.0",
     "next": "^15.5.4",
     "next-auth": "^4.24.11",
-    "postcss": "^8.5.6",
+    "postcss": "8.4.31",
     "prisma": "^6.16.2",
     "react": "^19.1.1",
     "react-day-picker": "^9.11.0",
