--- a/cutschedule/package.json
+++ b/cutschedule/package.json
@@ -29,6 +29,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "firebase-admin": "^13.5.0",
     "googleapis": "^160.0.0",
     "lucide-react": "^0.544.0",
