--- a/cutschedule/vercel.json
+++ b/cutschedule/vercel.json
@@ -2,11 +2,7 @@
   "crons": [
     {
       "path": "/api/cron/reminders",
-      "schedule": "0,30 13-20 * * 0,3-6"
-    },
-    {
-      "path": "/api/cron/reminders",
-      "schedule": "0 13 * * 1,2"
+      "schedule": "0 13 * * *"
     }
   ],
   "regions": ["iad1"]
