refactor: update environment variable handling and enhance appointment duration consistency
- Added .env.local and related patterns to .gitignore to prevent local environment files from being tracked.
- Refactored appointment duration display across various components to utilize a centralized configuration from APP_CONFIG, ensuring consistency in appointment duration representation.
- Improved date formatting in the Privacy Policy and Terms of Service pages to use a consistent timezone-aware format.

These changes enhance the maintainability of environment configurations and improve the user experience by standardizing appointment duration displays.

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ cutschedule/token.txt
 .vercel
 cutschedule/.next/
 .playwright-mcp/
+
+# Environment variables
+.env.local
+.env*.local
+*.env.local
